# packages/api/src/index.ts
@@ -32,7 +32,16 @@ export {
   HandoffListItemSchema,
   HandoffCardBodySchema,
   HandoffPanelSchema,
-    HandoffCardSchema,
+  HandoffCardSchema,
+  DemoOfferteLineSchema,
+  DemoOfferteSchema,
+  DemoOffertePanelSchema,
+  OsProjectStatusSchema,
+  OsProjectSchema,
+  OsInfraItemSchema,
+  OsSnapshotSchema,
+  CockpitMorningHealthSchema,
+  CockpitMorningSchema,
   type SeedRequest,
   type SeedManifest,
   type PhenomenonKind,
@@ -61,5 +70,14 @@ export {
   type HandoffListItem,
   type HandoffCardBody,
   type HandoffPanel,
-    type HandoffCard,
+  type HandoffCard,
+  type DemoOfferteLine,
+  type DemoOfferte,
+  type DemoOffertePanel,
+  type OsProjectStatus,
+  type OsProject,
+  type OsInfraItem,
+  type OsSnapshot,
+  type CockpitMorningHealth,
+  type CockpitMorning,
 } from "./schemas";
